--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Avddtfsap2">
+        android:theme="@style/Theme.PlugPlaySplashScreen">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Avddtfsap2">
+            android:theme="@style/Theme.PlugPlaySplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
