--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 19 18:06:37 CET 2025
-sdk.dir=/home/stefan/Android/Sdk
+#Thu Nov 20 15:52:12 CET 2025
+sdk.dir=C\:\\Users\\steph\\AppData\\Local\\Android\\Sdk
